service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-webserver
  namespace: storage-benchmark
spec:
  selector:
    app: fio-benchmarking
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
